GRPC/grpc-ms-system-1/docker-envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080 # Port d'entrée pour le client (Envoy)
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        # Route 1: Product Service
                        - match: { prefix: "/v1/products" } # External path for Products
                          route:
                            cluster: product_service_cluster
                            timeout: 0s
                            # IMPORTANT: Add the gRPC-Web filter for gRPC traffic
                            grpc_json_transcoder:
                              proto_descriptor: "/etc/envoy/product.pb" # Compiled protobuf descriptor
                              services: [ "com.partenairedecode.product.service.ProductService" ]
                              convert_grpc_status: true
                              print_options: { add_whitespace: true, always_print_primitive_fields: true }

                        # Route 2: Payment Service
                        - match: { prefix: "/v1/payments" } # External path for Products
                          route:
                            cluster: payment_service_cluster
                            timeout: 0s
                            # IMPORTANT: Add the gRPC-Web filter for gRPC traffic
                            grpc_json_transcoder:
                              proto_descriptor: "/etc/envoy/payment.pb" # Compiled protobuf descriptor
                              services: [ "com.partenairedecode.paymentservice.service.PaymentGrpcService" ]
                              convert_grpc_status: true
                              print_options: { add_whitespace: true, always_print_primitive_fields: true }

                        # Route 3: Order Service
                        - match: { prefix: "/v1/orders" } # External path for Products
                          route:
                            cluster: order_service_cluster
                            timeout: 0s
                            # IMPORTANT: Add the gRPC-Web filter for gRPC traffic
                            grpc_json_transcoder:
                              proto_descriptor: "/etc/envoy/order.pb" # Compiled protobuf descriptor
                              services: [ "com.partenairedecode.orderservice.service.OrderService" ]
                              convert_grpc_status: true
                              print_options: { add_whitespace: true, always_print_primitive_fields: true }

                # 🔑 Clé pour gRPC : Active le protocole HTTP/2 (nécessaire pour gRPC)
                http2_protocol_options: {}
                codec_type: AUTO

  clusters:
    # 1. Cluster pour Product Service (port 9090)
    - name: product_service_cluster
      connect_timeout: 5s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {} # Nécessaire pour les connexions sortantes gRPC
      load_assignment:
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: 127.0.0.1, port_value: 9090 }

    # 2. Cluster pour Order Service (port 9091)
    - name: order_service_cluster
      connect_timeout: 5s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: 127.0.0.1, port_value: 9091 }

    # 3. Cluster pour Payment Service (port 9092)
    - name: payment_service_cluster
      connect_timeout: 5s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: 127.0.0.1, port_value: 9092 }
